--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,29 +1,32 @@
 <div class="header">
-
-    <div class="navigation">
-
-        <a extended routerLink="/calendar" routerLinkActive="active" ariaCurrentWhenActive="page"> 
-            <mat-icon>calendar_today</mat-icon>
-            Calendar
-        </a>
-
-        <a extended routerLink="/meals" routerLinkActive="active" ariaCurrentWhenActive="page"> 
-            <mat-icon>local_dining</mat-icon>
-            Meals
-        </a>
-
-    </div>
-
-    <div class="user">
-        <button mat-icon-button [matMenuTriggerFor]="userMenu"> 
-            <mat-icon>perm_identity</mat-icon>
-        </button>
+    <div class="wrap">
+        <div class="navigation">
+            <div class="logo">
+                <img src="/assets/img/logo.png">
+            </div>
+            <button mat-button extended routerLink="/calendar" routerLinkActive="active" ariaCurrentWhenActive="page" class="colorBtn">
+                <mat-icon>calendar_today</mat-icon>
+                Calendario
+            </button>
+            <button mat-button extended routerLink="/meals" routerLinkActive="active" ariaCurrentWhenActive="page" class="colorBtn">
+                <mat-icon>local_dining</mat-icon>
+                Menu
+            </button>
+            <button mat-button extended routerLink="/meals-api" routerLinkActive="active" ariaCurrentWhenActive="page" class="colorBtn">
+                <mat-icon>euro_symbol</mat-icon>
+                Otras comidas
+            </button>
+        </div>
+        <div class="user">
+            <button mat-icon-button [matMenuTriggerFor]="userMenu" class="colorBtn"> 
+                <mat-icon>perm_identity</mat-icon>
+            </button>
+        </div>
     </div>
 
 </div>
 
 <mat-menu #userMenu="matMenu">
     <button mat-menu-item (click)="logout()">Logout</button>
-    <button mat-menu-item>Update User</button>
-  </mat-menu>
+</mat-menu>
 
