--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,13 +1,38 @@
 .header {
 	width: 100%;
-	height: 75px;
-	background-color: rgb(142, 142, 237);
-
+	height: 4rem;
+	background-color: #1b8d8c;
 	display: flex;
-	flex-direction: row;
-	align-items: center;
+	justify-content: center;
+}
+
+.logo{
+	margin-right: 1rem;
+}
+.logo img{
+	height: 7rem;
+	margin-top: 0.5rem;
 }
 
 .user {
 	margin-left: auto;
+}
+
+.wrap {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin: 0 3rem;
+	width: 100%;
+}
+
+.navigation{
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	height: 100%;
+}
+
+.colorBtn{
+	color: rgba(228, 250, 248, 0.938) !important;
 }
