--- a/src/app/views/calendar/calendar-day/calendar-day.component.scss
+++ b/src/app/views/calendar/calendar-day/calendar-day.component.scss
@@ -1,6 +1,49 @@
 .calendar-day {
-    height: 100px;
-    width: 200px;
+    height: 150px;
+    width: 180px;
 
+    border-radius: 0% !important;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.date {
+    justify-content: center;
+
+    .date-text {
+        font-size: 16px;
+        color: #616161;
+    }
+}
+
+.meal {
+    font-size: 18px;
+    font-weight: 400;
+    word-wrap: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.valid-meal {
     cursor: pointer;
+}
+
+.current-day {
+    background-color: rgb(143, 216, 252);
+}
+
+.actions {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    padding: unset !important;
+
+    .edit-btn {
+        color: #1b8d8c;
+    }
 }
