--- a/src/app/views/calendar/calendar-week/calendar-week.component.scss
+++ b/src/app/views/calendar/calendar-week/calendar-week.component.scss
@@ -2,3 +2,38 @@
     display: flex;
     flex-direction: row;
 }
+
+.calendar-week-in {
+    display: flex;
+    flex-direction: row;
+
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 1px solid black;
+
+    &.first {
+        border-top: 2px solid black;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+    }
+
+    &.last {
+        border-bottom: 2px solid black;
+        border-bottom-left-radius: 2px;
+        border-bottom-right-radius: 2px;
+    }
+}
+
+.calendar-week-day {
+    border-right: 1px solid black;
+}
+
+.calendar-week-day:last-child {
+    border-right: unset;
+}
+
+.redo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
