--- a/src/app/views/meals/meal-card/meal-card.component.scss
+++ b/src/app/views/meals/meal-card/meal-card.component.scss
@@ -1,4 +1,39 @@
 .meal-card {
-    max-width: 300px;
+    max-width: 18rem;
+    height: 26rem;
     cursor: pointer;
+}
+
+.img {
+    width: 18rem;
+    height: 10rem;
+    object-fit: cover;
+    margin: 0.5rem 0 0.5rem 0;
+}
+
+
+.title{
+    word-wrap: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
+.btn{
+    color : #1b8d8c
+}
+
+.actions{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.description{
+    word-wrap: break-word;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
