--- a/src/app/views/meals/meals.component.scss
+++ b/src/app/views/meals/meals.component.scss
@@ -1,18 +1,26 @@
 .meal-view {
-    height: calc(100% - 75px);
+    //height: calc(100% - 75px);
     width: 100%;
-    background-color: rgb(111, 111, 111);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.meals-search {
+    display: flex;
+    width: 97%;
 }
 
 .meals {
-    width: 80%;
-    height: 500px;
+    width: 95%;
+    height: auto;
     padding: 10px;
-    overflow-y: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: baseline;
     gap: 10px 30px;
 }
