styling the app

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="wrap">
         <div class="navigation">
             <div class="logo">
-                <img src="/assets/img/logo.png">
+                <img src="/assets/img/logo-recortado.png">
             </div>
             <button mat-button extended routerLink="/calendar" routerLinkActive="active" ariaCurrentWhenActive="page" class="colorBtn">
                 <mat-icon>calendar_today</mat-icon>
