--- a/src/app/views/calendar/calendar-day/calendar-day.component.scss
+++ b/src/app/views/calendar/calendar-day/calendar-day.component.scss
@@ -33,7 +33,7 @@
 }
 
 .current-day {
-    background-color: rgb(143, 216, 252);
+    background-color: #BFE1F4;
 }
 
 .actions {
@@ -44,6 +44,6 @@
     padding: unset !important;
 
     .edit-btn {
-        color: #1b8d8c;
+        color: #056886;
     }
 }
