--- a/src/app/views/calendar/calendar.component.scss
+++ b/src/app/views/calendar/calendar.component.scss
@@ -20,7 +20,7 @@
     align-self: center;
 
     .create-button-button {
-        background-color: #1b8d8c;
+        background-color: #056886;
         color: white;
     }
 }
@@ -38,7 +38,7 @@
 
         .redo-button{
             color: white;
-            background-color: #1b8d8c;
+            background-color: #056886;
         }
 
         .pdf-button{
