--- a/src/app/views/meals/meal-search/meal-search.component.scss
+++ b/src/app/views/meals/meal-search/meal-search.component.scss
@@ -16,6 +16,6 @@
 }
 
 .colorBtn{
-    background-color: #1b8d8c !important;
+    background-color: #056886 !important;
     color: white !important;
 }
