--- a/src/app/views/users/users.component.scss
+++ b/src/app/views/users/users.component.scss
@@ -55,8 +55,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #056886;
+	background-color: #056886;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -106,7 +106,7 @@ input {
 	width: 100%;
 
     &.ng-invalid.ng-touched {
-        border-bottom: 2px solid red;
+        border-bottom: 2px solid #2bceff;
     }
 }
 
@@ -181,9 +181,9 @@ input {
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #056886;
+	background: -webkit-linear-gradient(to right, #056886, #056886);
+	background: linear-gradient(to right, #056886, #056886);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
