--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
 	width: 100%;
-	height: 4rem;
-	background-color: #1b8d8c;
+	height: 5rem;
+	background-color: #BFE1F4;
 	display: flex;
 	justify-content: center;
 }
@@ -12,6 +12,8 @@
 .logo img{
 	height: 7rem;
 	margin-top: 0.5rem;
+	width: 4rem;
+	height: 4.8rem;
 }
 
 .user {
@@ -34,5 +36,5 @@
 }
 
 .colorBtn{
-	color: rgba(228, 250, 248, 0.938) !important;
+	color: #1C1A46 !important;
 }
