--- a/src/app/views/meals/meal-select-ingredients/meal-select-ingredients.component.html
+++ b/src/app/views/meals/meal-select-ingredients/meal-select-ingredients.component.html
@@ -1,6 +1,6 @@
 <div class="select-ingredients">
 
-    <h2 mat-dialog-title>Cambiar Comida</h2>
+    <h2 mat-dialog-title>Ingredientes</h2>
 
     <mat-dialog-content>
 
