--- a/src/app/views/users/users.component.html
+++ b/src/app/views/users/users.component.html
@@ -42,13 +42,15 @@
         <div class="overlay-container">
             <div class="overlay">
                 <div class="overlay-panel overlay-left">
-                    <h1>¡Me alegra verte de nuevo!</h1>
-                    <p>Por favor, incia sesión con tu email y contraseña para seguir disfrutando de nuestra aplicación</p>
+                    <h1>¡Bienvenido!</h1>
+                    <p>Introduce los datos necesarios para comenzar a usar nuestra aplicación</p>
+                    <p>¿Ya tienes una cuenta creada? Inicia sesión</p>
                     <button (click)="changeForm()" class="ghost" id="signIn">Iniciar Sesión</button>
                 </div>
                 <div class="overlay-panel overlay-right">
-                    <h1>¡Bienvenido!</h1>
-                    <p>Introduce los datos necesarios para comenzar a usar nuestra aplicación</p>
+                    <h1>¡Me alegra verte de nuevo!</h1>
+                    <p>Por favor, incia sesión con tu email y contraseña para seguir disfrutando de nuestra aplicación</p>
+                    <p>¿No estas registrado aún? Crea una cuenta</p>
                     <button (click)="changeForm()" class="ghost" id="signUp">Registrarse</button>
                 </div>
             </div>
